fix(nc-gui); update toolbar menu text grom GroupBy to Group

--- a/packages/nc-gui/lang/en.json
+++ b/packages/nc-gui/lang/en.json
@@ -946,7 +946,8 @@
       "hidden": "Hide pre-filled fields",
       "lockedFieldTooltip": "Pre-filled value"
     },
-    "getPreFilledLink": "Get Pre-filled Link"
+    "getPreFilledLink": "Get Pre-filled Link",
+    "group": "Group"
   },
   "tooltip": {
     "reachedSourceLimit": "Limited to only one data source for the moment",
